# epically-powerful

./: .buildinfo  .gitignore  README.md  \  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py  v3_test.py
.doctrees/: environment.pickle  index.doctree
.doctrees/pages/: api.doctree  example_controllers.doctree  getting_started.doctree  part_picker.doctree  reviewing_the_basics.doctree  setup.doctree  tests.doctree  tutorials.doctree
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-wheels.yml  documentation.yml
_sources/: index.md.txt
_sources/pages/: reviewing_the_basics.md.txt
_static/: css-style.css  pygments.css
docs/: info.txt
docs/source/: conf.py  index.md
epicallypowerful/: __init__.py
epicallypowerful/actuation/: __init__.py  actuator_abc.py  actuator_group.py  motor_data.py  torque_monitor.py  torque_monitoring.py
epicallypowerful/sensing/: __init__.py  imu_abc.py  imu_data.py  microstrain_imu.py
epicallypowerful/toolbox/: __init__.py  _clocking.c  _clocking.pyx  cli.py  clocking.py  data_recorder.py  jetson_performance.py  robstride_setup.py  robstride_setup_gui.py  visualization.py
examples/: display_imu_data.py  display_microstrain_imu_data.py  display_motor_data.py  display_open_imu_data.py  example_1motor.py  impedance_controller.py  imu_actuator_controller.py  output.csv  output_1.csv  sample_data_recorder.py  sample_impedance_controller.py  sample_imu_actuator_controller.py  sample_position_controller.py  test_3.csv
pages/: api.html  example_controllers.html  getting_started.html  part_picker.html  reviewing_the_basics.html  setup.html  tests.html  tutorials.html
pages/api/: actuation.html  sensing.html  toolbox.html
(+100 files in other folders)
